--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
         </div>
     </div>
     
+    <script src="obstacle.js"></script>
+    <script src="boss.js"></script>
+    <script src="npc.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
