--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
     <script src="obstacle.js"></script>
     <script src="boss.js"></script>
     <script src="npc.js"></script>
+    <script src="skills.js"></script>
+    <script src="achievements.js"></script>
+    <script src="statistics.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
