feat: 添加增强视觉效果系统
- 新增增强粒子系统(enhanced-particles.js)
- 新增武器特效系统(weapon-effects.js)
- 新增环境特效系统(environment-effects.js)
- 新增视觉配置管理(visual-config.js)
- 集成屏幕震动、伤害数字、枪口火光等特效
- 修复所有JavaScript运行时错误
- 优化游戏视觉体验和性能

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>
     
+    <script src="visual-config.js"></script>
     <script src="obstacle.js"></script>
     <script src="boss.js"></script>
     <script src="npc.js"></script>
@@ -48,6 +49,9 @@
     <script src="performance-optimization.js"></script>
     <script src="ui-improvements.js"></script>
     <script src="ui-unified.js"></script>
+    <script src="enhanced-particles.js"></script>
+    <script src="weapon-effects.js"></script>
+    <script src="environment-effects.js"></script>
     <script src="test-debug.js"></script>
     <script src="enemy.js"></script>
     <script src="wave.js"></script>
