--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="weapon-effects.js"></script>
     <script src="environment-effects.js"></script>
     <script src="test-debug.js"></script>
+    <script src="coin-system.js"></script>
     <script src="enemy.js"></script>
     <script src="wave.js"></script>
     <script src="game.js"></script>
