feat: 实现视觉特效增强系统
- 新增 VisualEffectsEnhanced 类，包含光照系统、后处理效果和特殊效果
- 集成枪口闪光、爆炸光效、屏幕震动和颜色滤镜
- 在游戏循环中添加视觉特效系统的更新和渲染
- 在关键游戏事件中触发相应的视觉特效
- 更新配置文件，添加视觉特效相关设置
- 在HTML中引用新的视觉特效脚本

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script src="enhanced-particles.js"></script>
     <script src="weapon-effects.js"></script>
     <script src="environment-effects.js"></script>
+    <script src="visual-effects-enhanced.js"></script>
     <script src="test-debug.js"></script>
     <script src="coin-system.js"></script>
     <script src="enemy.js"></script>
