第四期开发完成：添加完整的开发者工具套件
- 新增特效编辑器(effects-editor.js)：实时调节游戏特效参数
- 新增配置管理系统(config-manager.js)：统一管理游戏配置
- 新增性能监控面板(performance-monitor.js)：实时监控游戏性能
- 新增开发者控制台(developer-console.js)：提供调试命令接口
- 新增环境艺术系统(environment-art.js)：增强视觉效果
- 新增UI主题系统(ui-theme-system.js)：统一界面风格
- 更新游戏主文件和HTML以集成新功能
- 添加详细的开发总结文档

--- a/index.html
+++ b/index.html
@@ -49,10 +49,18 @@
     <script src="performance-optimization.js"></script>
     <script src="ui-improvements.js"></script>
     <script src="ui-unified.js"></script>
+    <script src="ui-theme-system.js"></script>
     <script src="enhanced-particles.js"></script>
     <script src="weapon-effects.js"></script>
     <script src="environment-effects.js"></script>
+    <script src="environment-art.js"></script>
     <script src="visual-effects-enhanced.js"></script>
+    <script src="character-animation.js"></script>
+    <script src="audio-visual-sync.js"></script>
+    <script src="effects-editor.js"></script>
+    <script src="config-manager.js"></script>
+    <script src="performance-monitor.js"></script>
+    <script src="developer-console.js"></script>
     <script src="test-debug.js"></script>
     <script src="coin-system.js"></script>
     <script src="enemy.js"></script>
