--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
     <script src="config-manager.js"></script>
     <script src="performance-monitor.js"></script>
     <script src="developer-console.js"></script>
+    <script src="character-visual-system.js"></script>
+    <script src="enemy-diversity-system.js"></script>
+    <script src="enhanced-ai-system.js"></script>
+    <script src="intelligent-enemy-ai.js"></script>
+    <script src="group-behavior-system.js"></script>
+    <script src="dynamic-difficulty-system.js"></script>
+    <script src="learning-ai-system.js"></script>
     <script src="test-debug.js"></script>
     <script src="coin-system.js"></script>
     <script src="enemy.js"></script>
