修复敌人生成系统问题：修复EnemyDiversitySystem的createEnemy方法，解决statusEffects类型不匹配，添加visualVariant支持

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>
     
+    <script src="config.js"></script>
     <script src="visual-config.js"></script>
     <script src="obstacle.js"></script>
     <script src="boss.js"></script>
